# opentx

./: .gitignore
companion/src/: CMakeLists.txt
companion/src/firmwares/: boards.cpp  boards.h  generalsettings.cpp  moduledata.cpp  rawsource.cpp  rawswitch.cpp
companion/src/firmwares/opentx/: opentxeeprom.cpp  opentxeeprom.h  opentxinterface.cpp
companion/src/generaledit/: generalsetup.cpp
companion/src/modeledit/: setup.cpp
companion/src/storage/: firmwareinterface.cpp
radio/src/: CMakeLists.txt  audio.cpp  dataconstants.h  datastructs.h  opentx.cpp  simu.cpp  switches.cpp  tasks.cpp  trainer.cpp
radio/src/gui/: gui_common.cpp
radio/src/gui/128x64/: model_setup.cpp
radio/src/gui/212x64/: bmp.cpp  lcd.cpp  view_main.cpp
radio/src/gui/common/stdlcd/: radio_hardware.cpp
radio/src/lua/: api_general.cpp
radio/src/pulses/: dsm2.cpp  multi.cpp
radio/src/storage/: eeprom_rlc.cpp
radio/src/storage/conversions/: datastructs_218.h
radio/src/targets/common/arm/stm32/: adc_driver.cpp  pwr_driver.cpp  timers_driver.cpp
radio/src/targets/common/arm/stm32/bootloader/: CMakeLists.txt  boot.cpp
radio/src/targets/hitec/: CMakeLists.txt  backlight_driver.cpp  baro_driver.cpp  board.cpp  board.h  debug_driver.cpp  extmodule_driver.cpp  hal.h  i2c_driver.cpp  keys_driver.cpp  lcd_driver_spi.cpp  led_pulse.cpp  pi_driver.cpp  startup_stm32f40_41xxx.s  startup_stm32f42_43xxx.s  stm32_ramboot.ld  stm32f407_flash.ld  stm32f427_flash.ld  telemetry_driver.cpp  top_lcd_driver.cpp
radio/src/targets/hitec/fastmavlink/: fastmavlink_config.h
radio/src/targets/hitec/fastmavlink/lib/: fastmavlink_functions.h
radio/src/targets/hitec/fastmavlink/minimal/: minimal.h  minimal_msg_entries.h
radio/src/targets/taranis/: CMakeLists.txt  hal.h  lcd_driver_spi.cpp
radio/src/translations/: en.h.txt  untranslated.h
